# mba-dsa

./: .editorconfig  .env.example  .gitignore  Dockerfile  README.md  nodemon.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: gcr.yml  hf_spaces.yml
src/mba_dsa/: __init__.py  main.py
src/mba_dsa/app/: __init__.py  cluster.py  graph.py  gui.py  on_callback.py  wordcloud.py
src/mba_dsa/data/: __init__.py  cluster.py  dataset.py  graph.py  tf_idf.py
src/mba_dsa/gui/callbacks/: _base.py  cluster.py  graph.py  wordcloud.py
src/mba_dsa/gui/components/: __init__.py  _base.py  cluster.py  graph.py  main.py  tfidf.py  wordcloud.py
src/mba_dsa/gui/pages/: __init__.py  cluster.py  graph.py  main.py  wordcloud.py
src/mba_dsa/plot/: __init__.py  _base.py  _utils.py  graph.py  scatter.py  scatter_2d.py  scatter_3d.py  wordcloud.py
src/mba_dsa/schemas/: __init__.py  _base.py  cluster.py  graph.py  wordcloud.py
src/mba_dsa/schemas/_types/: __init__.py  data.py  datasets.py  fn.py
src/mba_dsa/schemas/enums/: components.py  dataset.py  emojis.py  inputs.py  plot.py
src/mba_dsa/schemas/inputs/: __init__.py  _base.py  _commons.py  cluster.py  graph.py  tfidf.py  wordcloud.py
src/mba_dsa/services/: __init__.py  _base.py  cluster.py  graph.py  wordcloud.py
src/mba_dsa/settings/: __init__.py  _base.py  datasets.py  gradio.py  hf.py  log.py  settings.py
src/mba_dsa/settings/ui/: __init__.py  _commons.py  cluster.py  graph.py  main_ui.py  wordcloud.py
src/mba_dsa/utils/: __init__.py  data.py  decorators.py  plot.py  setup.py
