[project]
name = "mba-dsa"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "datasets>=4.5.0",
    "gradio>=6.3.0",
    "polars>=1.37.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pyvis>=0.3.2",
    "scikit-learn>=1.8.0",
    "wordcloud>=1.9.5",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-root = "src"
module-name = "mba_dsa"
